# Extremal

./: .gcloudignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.server  LICENSE  NEXT_STEPS.md  README.md  TESTING.md  cloudbuild.yaml  minegraph_gem_v2.py  package-lock.json  run  rust-toolchain.toml
.claude/: launch.json
.github/workflows/: ci.yml
crates/extremal-experiments/benches/: profiling.rs
crates/extremal-strategies/src/: crossover.rs  lib.rs  polish.rs  tabu.rs  tree2.rs
crates/extremal-worker-core/src/: engine.rs
crates/extremal-worker/src/: main.rs
crates/minegraph-cli/: Cargo.toml
crates/minegraph-cli/src/: config.rs  identity.rs  main.rs
crates/minegraph-dashboard/: Cargo.toml
crates/minegraph-dashboard/src/: protocol.rs  server.rs  state.rs
crates/minegraph-experiments/src/: harness.rs  main.rs
crates/minegraph-server/src/: lib.rs  main.rs
crates/minegraph-strategies/src/: tabu.rs
crates/minegraph-worker-api/src/: observer.rs
crates/minegraph-worker-core/: Cargo.toml
crates/minegraph-worker-core/src/: client.rs  dashboard.rs  engine.rs  lib.rs
crates/minegraph-worker/src/: main.rs
crates/ramseynet-graph/: Cargo.toml
crates/ramseynet-graph/src/: adjacency.rs  cid.rs  lib.rs  rgxf.rs
crates/ramseynet-ledger/: Cargo.toml
crates/ramseynet-ledger/src/: lib.rs  models.rs  queries.rs  schema.rs
crates/ramseynet-search/: Cargo.toml
crates/ramseynet-search/src/: annealing.rs  client.rs  error.rs  greedy.rs  init.rs  lib.rs  local_search.rs  main.rs  search.rs  tree.rs  worker.rs
crates/ramseynet-search/src/viz/: mod.rs  page.html  server.rs
crates/ramseynet-server/: Cargo.toml
crates/ramseynet-server/src/: lib.rs  main.rs
crates/ramseynet-server/tests/: system_test.rs
crates/ramseynet-strategies/src/: evo.rs  incremental.rs  tree.rs  tree2.rs
crates/ramseynet-types/: Cargo.toml
crates/ramseynet-types/src/: lib.rs
crates/ramseynet-verifier/: Cargo.toml
crates/ramseynet-verifier/benches/: scoring.rs
crates/ramseynet-verifier/src/: automorphism.rs  clique.rs  lib.rs  ovwc.rs  scoring.rs  types.rs
crates/ramseynet-worker/: Cargo.toml
crates/ramseynet-worker-api/src/: command.rs  lib.rs  observer.rs  strategy.rs
crates/ramseynet-worker-core/: Cargo.toml
crates/ramseynet-worker-core/src/: client.rs  engine.rs  lib.rs
crates/ramseynet-worker/src/: main.rs
dashboard/src/lib/: dashboard-store.svelte.ts
deploy/: nginx-web.conf  web-entrypoint.sh
docs/: SIGNING_DESIGN.md  STRATEGY_DEV_PLAN.md
docs/notes/: todo-unassigned.md
experiments/agent/: strategies.json
minegraph-v1/: .gitignore  CLAUDE.md  Cargo.toml  run
minegraph-v1/crates/minegraph-scoring/: Cargo.toml
minegraph-v1/crates/minegraph-scoring/src/: lib.rs
minegraph-v1/crates/minegraph-worker-core/: Cargo.toml
minegraph-v1/crates/minegraph-worker-core/src/: client.rs  engine.rs  lib.rs
minegraph-v1/migrations/: 20260319000002_leaderboard_snapshots.sql
minegraph-v1/scripts/: fleet.sh
scripts/: agent-fleet.sh  agent-status.sh  analyze_experiment.sh  experiment-e005.sh  experiment.sh  fleet.sh  orchestrator.sh  wsl-dev.sh
skills/: experiment.md  strategy-research.md
web/: package.json  pnpm-lock.yaml  vite.config.ts
web/src/: app.css
web/src/lib/: api.ts
(+40 files in other folders)
