[package]
name = "minegraph-cli"
version = "0.1.0"
edition = "2021"
description = "MineGraph CLI — key management, config, and experiment orchestration"
license = "MIT"

[[bin]]
name = "minegraph"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
