[package]
name = "ramseynet-graph"
version = "0.1.0"
edition = "2021"
description = "RGXF graph encoding, adjacency matrix, and content addressing"
license = "MIT"

[dependencies]
ramseynet-types = { path = "../ramseynet-types" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
